tests/compile_fail/not_on_a_function.stderr
error: must be used on a function
 --> tests/compile_fail/not_on_a_function.rs:4:1
  |
4 | struct A;
  | ^^^^^^
